Fix some errors and inaccuracy in engage of velocity (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -380,7 +380,7 @@ il \emph{modus operandi} della fisica.
 
 \begin{itemize}
 \item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
-\item \textbf{Materiale:} Liquidi di Differente Viscosità, Contenitori Trasparenti Identici, Biglia
+\item \textbf{Materiale:} Liquidi di Differente Viscosità, Contenitori Trasparenti Identici, Biglie
 \end{itemize}
 
 L’insegnante mostra agli studenti la caduta di una biglia in diversi liquidi. \`E
@@ -388,13 +388,13 @@ possibile eseguire questo esperimento sia in DAD, mostrando in telecamera i
 contenitori con i liquidi, sia in classe portando tutto il materiale
 occorrente. La scelta delle sostanze utilizzate è libera. L’unico criterio importante è
 che i liquidi abbiano viscosità sensibilmente diverse, poiché in questo modo la velocità
-della biglia all'interno del contenitore sarà visibilmete differente.
+della biglia all'interno del contenitore sarà visibilmete differente nei vari casi.
 
-In questo progetto sono stati scelti le seguenti sostanze: detersivo per i piatti,
+In questo progetto sono state scelte le seguenti sostanze: detersivo per i piatti,
 acqua e olio di semi; posti in tre contenitori di pari altezza, trasparenti e di forma
 il più possibile cilindrica (così da non avere effetti ottici di deformazione della
 biglia che cade) (Figura \ref{fig:liquids}).
-Le biglie utilizzate devono essere tutte uguali tra loro.
+Le biglie utilizzate devono essere tutte uguali tra loro per massa e dimensione.
 
 \begin{figure}[H]
 \centering
@@ -421,8 +421,8 @@ si muoverà più velocemente. \`E importante che in questa fase e per
 tutto il resto del percorso didattico, il docente non utilizzi termini
 che si riferiscono a concetti che gli studenti non hanno mai
 affrontato prima. \`E necessario infatti che lo studente faccia
-esperienza dei significati ai quali questi termini riferiscono,
-prima che i termini vengano introdotti. Questo vale in particolare
+esperienza dei significati ai quali questi termini fanno riferimento,
+prima che questi vengano introdotti. Questo vale in particolare
 quando i termini in questione trovano un utilizzo in contesti
 non scientifici\cite{arons1997teaching}.
 Il professore dunque non parlerà mai di \emph{velocità} durante
@@ -433,12 +433,12 @@ minore?'', utilizzando i termini introdotti nella Sezione
 \ref{posizioni_istanti_explain}.
 
 In seguito l'insegnante effettua l'esperimento davanti alla classe.
-Se l'esperienza viene mostrata in modalità in presenza, il professore
+Se l'esperienza viene mostrata in presenza, il professore
 può chiedere a tre studenti di lasciar cadere la biglia nei tre recipienti
-nello stesso momento; in questo modo gli alunni saranno facilitati
-nell'osservare quale pallina giunge prima e quale dopo sul fondo del
-recipiente. Nel caso della DAD, utilizzerà liquidi diversi in sequenza,
-ma dovrà avere partcicolare cura di scegliere tre sostanze dalla
+simultaneamente; in questo modo gli alunni saranno facilitati
+nell'osservare quale biglia giunge prima e quale dopo sul fondo del
+recipiente. Nel caso della DAD, le cadute verranno mostrate in successione,
+ ma dovrà avere particolare cura di scegliere tre sostanze dalla
 viscosità molto diversa
 \footnote{
           \`E possibile scaricare il video della biglia che
