Change world bib to ref in note (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -102,7 +102,7 @@ di un colibrì in volo, che si nutre da un tubicino (Figura \ref{fig:hummingbird
 \footnote{
 \`E possibile scaricare il video presso
 \href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/Hummingbird.mp4?raw=true}{questa pagina web}
-. L'indirizzo del video originale si trova nella bibliografia\cite{hbird}.
+. L'indirizzo del video originale si trova nei riferimenti\cite{hbird}.
 }.
 Solamente la componente video, e non quella audio, è stata invertita per
 aumentare l'effetto di inganno.
