Add extend of velocity (progetto finale)

--- a/progetto_finale/bibliografia.bib
+++ b/progetto_finale/bibliografia.bib
@@ -39,3 +39,9 @@
   year={1994},
   publisher={American Association of Physics Teachers}
 }
+@misc{felix,
+  title = {La GoPro supera il muro del suono in caduta libera da 39.045 metri},
+  author = {Adriano Lolli},
+  howpublished = {\url{https://youtu.be/JyHDaaXNDmA}},
+  note = {Data consultazione: 2021-02-06}
+}
