--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -451,6 +451,110 @@ viscosità molto diversa
           quello con olio di semi.
          }.
 
+\section{Explain}\label{velocità_explain}
+
+\section{Extend}
+
+\begin{itemize}
+\item \textbf{Tempo richiesto in aula:} 30\textsuperscript{$\prime$}
+\item \textbf{Materiale:} Computer
+\end{itemize}
+
+In questa fase si propone che lo studente estenda la propria conoscenza
+riguardo la velocità, introducento l'idea di \emph{velocità istantanea}.
+Uno studente di 1\textsuperscript{a} liceo scientifico, non dispone
+degli stumenti matematici necessari per comprendere la definizione
+di velocità istantanea, che richiederebbe il concetto
+di \emph{limite} e di \emph{derivata}; Tuttavia egli, sulla base
+dei concetti introdotti nelle fasi precedenti, può acquisire
+una conoscenza intuitiva dell'operazione di limite, che permette
+il passaggio dalla velocità media, alla velocità istantanea.
+
+Il docente per aiutare lo studente a comprendere questa idea,
+mostra un video di un corpo in caduta libera. Per questo progetto
+si è scelto un estratto del lancio di Felix Baumgartner da un
+pallone aerostatico nella stratosfera
+\footnote{
+          \`E possibile scaricare l'estratto del video presso
+          \href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/felix_baumgartner.mp4?raw=true}{questo indirizzo web}.
+          L'indirizzo del video originale si trova nwi riferimenti\cite{felix}.
+         }.
+L'insegnante chiede agli studenti di descrivere cosa accade nel
+video, concentrandosi in particolare sulla velocità di Felix in caduta
+libera. Gli studenti potranno osservare che dopo il lancio la velocità
+dell'astronauta aumenta rapidamente e dunque non rimane costante, come nel
+caso delle biglia che cade in un fluido molto viscoso.
+Gli studenti potrebbero utilizzare frasi come ``L'astronuata cade
+sempre più velocemente'' oppure ``L'astronauta parte
+lentamente e poi va più veloce''.
+Il professore dovrebbe porre l'attenzione della classe sulle
+risposte più simili alla prima affermazione. Quest'ultima
+infatti evidenzia il fatto che \emph{in ogni istante} la velocità
+dell'astronauta in caduta sta cambiando (e nel caso particolare aumenta).
+Il professore aiuta gli studenti a giungere ad una comprensione
+più lucida di questa realizzazione, utilizzando il software
+\emph{GeoGebra}
+\footnote{
+          GeoGebra è una suite di programmi per la didattica della matematica
+          disponibile per iOS, Android, GNU/Linux, Windows, Mac OS, Chromebook.
+          Per maggiori informazioni, si visiti
+          \href{https://www.geogebra.org/}{questo sito web}.
+         }.
+Egli disegna con il programma un ramo di parabola con concavità
+verso il basso e la mostra agli studenti (Si veda la Figura
+\ref{fig:geogebra}), chiedendo di immaginare che questo grafico
+rappresenti il moto di Felix nella stratosfera.
+
+\begin{figure}[H]
+\centering
+  \begin{subfigure}[b]{0.49\textwidth}
+  \includegraphics[width=\textwidth]{tg1}
+  \end{subfigure}
+  \begin{subfigure}[b]{0.49\textwidth}
+  \includegraphics[width=\textwidth]{tg2}
+  \end{subfigure}
+  \begin{subfigure}[b]{0.49\textwidth}
+  \includegraphics[width=\textwidth]{tg3}
+  \end{subfigure}
+  \begin{subfigure}[b]{0.49\textwidth}
+  \includegraphics[width=\textwidth]{tg4}
+  \end{subfigure}
+  \caption{
+           Rami parabola  disegnati con GeoGebra.
+          }
+  \label{fig:geogebra}
+\end{figure}
+
+La scala sugli assi non è importante e neppure che gli studenti sappiano quale
+curva è rappresentata nel grafico.
+Il professore chiede agli studenti di concentrarsi su un tratto arbitrario della
+caduta di Felix e di figurarlo nella propria mente; poi sceglie due punti
+della curva, li rappresenta grazie al software e chiede agli studenti
+come si potrebbe rappresentare sul grafico la velocità media dell'astronauta
+in quel preciso tratto, compreso tra i punti A e B.
+Si suppone che gli studenti, in virtù di quanto appreso
+nella Sezione \ref{velocità_explain}, sapranno indicare al professore di
+disegnare una retta che congiunga i due punti presi in considerazione.
+Il docente può aiutare gli studenti rappresentando nel grafico le proiezioni
+dei punti scelti sugli assi ordinati.
+L'insegnante rappresenta la retta secante sul diagramma cartesiano e
+successivamente, utilizzando lo \emph{slider} presente nel programma,
+avvicina il punto B al punto A. Gli studenti osservano che l'inclinazione
+della secante è cambiata e questa si avvicina sempre più alla curva.
+Il professore ripete l'operazione altre due o
+tre volte, avvicinando sempre di più i punti A e B (permettendo ai ragazzi
+ogni volta vi osservare la nuova retta secante) fino a che i due punti
+coincidono.
+
+Il professore suggerisce agli studenti che ora la retta rappresentata nel grafico
+è la retta tangente alla curva nel punto A, e chiede agli studenti se questa possa
+ancora rappresentare una velocità media. Gli studenti, guidati al caso limite dalla retta
+secante alla retta tangente, hanno ora la possibilità di realizzare che il coefficiente
+angolare di quest'ultima rappresenta la velocità media corrispondente ad un intervallo
+di tempo di durata \emph{zero} secondi, ovvero la ``\emph{velocità media di un istante}''.
+Il docente ufficializza la conoscenza acquisita, spiegando che questa grandezza è
+chiamata \emph{velocità instantanea} o più semplicemente \emph{velocità}.
+
 \chapter{Accelerazione, Moto Rettilineo Uniformemente Accelerato}
 \section{Explain}\label{a_explain}
 
