Add ref (porgetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -543,8 +543,8 @@ avvicina il punto B al punto A. Gli studenti osservano che l'inclinazione
 della secante è cambiata e questa si avvicina sempre più alla curva.
 Il professore ripete l'operazione altre due o
 tre volte, avvicinando sempre di più i punti A e B (permettendo ai ragazzi
-ogni volta vi osservare la nuova retta secante) fino a che i due punti
-coincidono.
+ogni volta di osservare la nuova retta secante) fino a che i due punti
+coincidono (Come si vede nella Figura \ref{velocità_explain}).
 
 Il professore suggerisce agli studenti che ora la retta rappresentata nel grafico
 è la retta tangente alla curva nel punto A, e chiede agli studenti se questa possa
