--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -10,6 +10,8 @@
 
 \usepackage{hyperref}
 
+\usepackage{amsmath}
+
 \addto\captionsitalian{\renewcommand{\bibname}{Riferimenti}}
 
 \title{Title} \author{Daniele Melocchi\\Agnese Montanaro\\Matteo
@@ -102,18 +104,16 @@ di un colibrì in volo, che si nutre da un tubicino (Figura \ref{fig:hummingbird
 \footnote{
 \`E possibile scaricare il video presso
 \href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/Hummingbird.mp4?raw=true}{questa pagina web}
-. L'indirizzo del video originale si trova nei riferimenti\cite{hbird}.
+. L'indirizzo del video originale si trova nei Riferimenti\cite{hbird}.
 }.
 Solamente la componente video, e non quella audio, è stata invertita per
 aumentare l'effetto di inganno.
-
 \begin{figure}
 \centering
   \includegraphics[width=\textwidth]{Hummingbird}
   \caption{Un frame del video di un colibrì in volo che si nutre da un tubicino.}
   \label{fig:hummingbird}
 \end{figure}
-
 Il docente in seguito chiede agli studenti di descrivere quanto viene
 visualizzato, e solamente infine svela che il video è riprodotto in
 reverse. In questo modo l'insegnante ha l'occasione di far notare
@@ -169,7 +169,6 @@ fotografia è un evento che accade in un istante determinato di tempo.
 \`E opportuno che il docente guidi gli studenti mostrando loro un paio di esempi
 di quanto richiesto, come una sequenza di foto di una pentola piena d’acqua
 posta sul fuoco o episodi di vita quotidiana (Figura \ref{fig:asse_t_pentola}).
-
 \begin{figure}[H]
 \centering
   \includegraphics[width=\textwidth]{asse_t_pentola}
@@ -196,7 +195,6 @@ posizione relativa rispetto ad altri oggetti.
 
 Anche in questo caso occorre che il professore mostri almeno uno più esempi
 (Si veda la Figura \ref{fig:asse_s}).
-
 \begin{figure}[H]
 \centering
   \includegraphics[width=\textwidth]{asse_s}
@@ -230,7 +228,6 @@ La Figura \ref{fig:piano_s_t} mostra un esempio del risultato atteso.
 Tutte e tre le attività sono pensate per essere svolte incollando le fotografie
 su un foglio, perché si ritiene che attraverso questa modalità operativa lo
 studente  possa avere occasione di riflettere e giudicare i risultati ottenuti.
-
 \begin{figure}[ht]
 \centering
   \includegraphics[width=\textwidth]{piano_s_t}
@@ -369,14 +366,14 @@ Per la valutazione di questo primo modulo del percorso il docente tiene conto de
 partecipazione degli studenti alle varie attività proposte, del lavoro svolto sui
 grafici richiesti e del loro coinvolgimento attivo all’interno dei gruppi di discussione.
 
-\chapter{Velocità, Moto Rettilineo Uniforme}
+\chapter{Velocità, Moto Rettilineo Uniforme}\label{velocità}
 In questa fase lo studente verrà guidato alla comprensione del concetto di
 velocità media e istantanea, e di legge oraria di un moto rettilineo
 uniforme attraverso alcune attività. Occorre che il percorso sia guidato, perché
 gli studenti di prima liceo affrontano per la prima volta questi argomenti e
 il \emph{modus operandi} della fisica.
 
-\section{Engage}
+\section{Engage}\label{velocità_engage}
 
 \begin{itemize}
 \item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
@@ -395,7 +392,6 @@ acqua e olio di semi; posti in tre contenitori di pari altezza, trasparenti e di
 il più possibile cilindrica (così da non avere effetti ottici di deformazione della
 biglia che cade) (Figura \ref{fig:liquids}).
 Le biglie utilizzate devono essere tutte uguali tra loro per massa e dimensione.
-
 \begin{figure}[H]
 \centering
   \begin{subfigure}[b]{0.5\textwidth}
@@ -414,7 +410,6 @@ Le biglie utilizzate devono essere tutte uguali tra loro per massa e dimensione.
           }
   \label{fig:liquids}
 \end{figure}
-
 Prima di iniziare la fase operativa, il professore propone un gioco
 agli studenti, chiedendo loro di indovinare in quale liquido la biglia
 si muoverà più velocemente. \`E importante che in questa fase e per
@@ -451,7 +446,253 @@ viscosità molto diversa
           quello con olio di semi.
          }.
 
+\section{Explore}
+In questa fase il professore propone agli alunni diverse attività da svolgere a
+casa per arrivare a comprendere i concetti citati ad inizio Capitolo
+\ref{velocità}.
+
+\section{Dal Grafico al Moto}
+
+\begin{itemize}
+\item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
+\item \textbf{Materiale:} Nastro adesivo, Foglio di Carta
+\end{itemize}
+
+Per la prima attività l’insegnante mostra agli studenti un piano cartesiano su
+cui sono posizionati alcuni punti e i cui assi rappresentano spostamento e
+tempo (Vedi Figura \ref{fig:kine_plot1}).
+\begin{figure}[ht]
+\centering
+  \includegraphics[width=\textwidth]{kine_plot1}
+  \caption{Grafico con punti per la prima attività
+           cinestetica.}
+  \label{fig:kine_plot1}
+\end{figure}
+Successivamente egli inquadra con la telecamera la sua mano
+poggiata sul bordo del tavolo di lavoro (Come in  Figura \ref{fig:kine_hand}),
+\begin{figure}[H]
+\centering
+  \includegraphics[width=\textwidth]{kine_hand}
+  \caption{Una mano che si muove sul bordo del tavolo durante la
+           prima attività cinestetica.}
+  \label{fig:kine_hand}
+\end{figure}
+dove sono stati precedentemente incollati dei pezzi di nastro adesivo
+equidistanti tra loro (non è rilevante la lunghezza della distanza
+tra le strisce di nastro, e può essere scelta arbitrariamente). A questo
+punto il docente muove la mano secondo quanto
+si legge dal grafico in Figura \ref{fig:kine_plot1}:
+\footnote{\`E possibile scaricare i video dell'attività cinestetica presso
+            \href{https://github.com/savaroskij/PED1/tree/master/progetto_finale/media/video/kine_videos_1}{questo indirizzo web}.
+            Si veda per questo particolare esempio il file \texttt{vid\_plot\_1\_scale.mp4}.
+         }
+sia le posizioni occupate dalla
+mano che i tempi tra un movimento e l’altro devono qualitativamente
+rispettare le informazioni presenti nel grafico. I riferimenti posti sul tavolo
+aiutano a mantenere le corrette proporzioni. Inoltre, potrebbe essere utile un
+dispositivo che aiuti a scandire il tempo, quale per esempio un metronomo. Nel
+caso in cui sia possibile la didattica in presenza, l’attività verrà mostrata
+disegnando il grafico alla lavagna e poggiando la mano sul bordo della
+cattedra. Il professore mostra la medesima attività, usando un paio di grafici
+più complessi, in cui non vi sono più solo dei punti, ma delle curve (Vedi Figura
+\ref{fig:kine_plot3}).
+Viene chiesto agli studenti di ripetere a casa l’attività usando
+nuovi grafici analoghi (Si veda l'Appendice \ref{appendix_kine}) e riprendendo
+per ciascuno la propria mano in movimento.
+Nella consegna viene richiesto anche
+di scegliere uno dei grafici e di descrivere per iscritto il moto osservato della
+propria mano.
+
+\begin{figure}[H]
+\centering
+  \includegraphics[width=\textwidth]{kine_plot2}
+  \label{fig:kine_plot2}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+  \includegraphics[width=\textwidth]{kine_plot3}
+  \caption{Grafici con spezzate per la prima attività
+           cinestetica.}
+  \label{fig:kine_plot3}
+\end{figure}
+
+
+\section{Dal Moto al Grafico}
+
+\begin{itemize}
+\item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
+\item \textbf{Materiale:} Nastro adesivo, Foglio di Carta
+\end{itemize}
+
+La seconda attività proposta agli studenti consiste nello svolgere il
+procedimento opposto rispetto all’attività precedente. Il professore presenta
+agli studenti dei video che mostrano  alcuni moti della sua mano lungo il bordo
+del tavolo (un minimo di tre) e chiede loro di graficarli. In questo modo
+ciascuno studente può concentrarsi sul moto del corpo, comprendendo più
+approfonditamente la relazione il moto della la mano e cosa viene riportato
+sul grafico
+\footnote{
+          Esempi di moti sono mostrati nei video presso
+          \href{https://github.com/savaroskij/PED1/tree/master/progetto_finale/media/video/kine_videos_2}{questa pagina web}.
+}
+In caso fosse possibile lavorare in classe, il moto rappresentato sui grafici
+può essere riprodotto dagli studenti con il proprio corpo, camminando in linea
+retta. Utilizzando un sensore di prossimità, è possibile controllare in
+tempo reale i movimenti degli studenti e appurare che il loro moto sia
+attinente a quello riportato nel grafico.
+
+\section{Velocità e Moto Rettilineo Uniforme}
+
+\begin{itemize}
+\item \textbf{Tempo richiesto in aula:} 30\textsuperscript{$\prime$}
+\item \textbf{Materiale:} Biglia, Contenitore Trasparente, Liquido, Cronometro, Righello
+\end{itemize}
+
+Il docente propone un’ultima attività che permetta agli studenti di osservare
+ed indagare un esempio di moto rettilineo uniforme. Una possibilità potrebbe
+essere quella di lasciar cadere una biglia all’interno di un contenitore
+trasparente riempito con una sostanza liquida (analogo a quello utilizzato
+nella Sezione \ref{velocità_engage}, si veda Figura \ref{fig:liquids}).
+Occorre che l’insegnante abbia
+le stesse accortezze discusse nella Sezione \ref{velocità_engage} e
+le espliciti ai suoi studenti. Inoltre si ritiene di fondamentale
+importanza la scelta del liquido, per questo
+l’insegnante deve verificare prima quale sia il più appropriato da suggerire
+agli studenti. Il criterio di scelta si basa sulla viscosità del liquido, la
+quale deve essere sufficiente affinché la biglia raggiunga una velocità
+prossima a quella limite molto rapidamente, proseguendo poi di moto uniforme
+(in prima approssimazione)
+lungo il resto del contenitore. Un esempio di sostanza potrebbe essere il
+detersivo per i piatti bottiglia in intervalli spaziali uguali tra loro (per esempio marcandoli con
+un pennarello), e di misurare questi ultimi e i tempi necessari
+alla biglia per percorrere ciascun tratto
+\footnote{\`E possiile scaricare il video dell'esperimento presso
+          \href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/biglia_detersivo.mp4?raw=true}{questa indirizzo web}.
+         }.
+Il docente chiede agli studenti di riportate in una tabella i dati
+misurati e di rappresentare il moto della biglia in un diagramma
+spazio tempo, esplicitando che per compiere quest'ultima operazione
+sarà necessario sommare di volta in volta tutte le distanze percorse
+dalla biglia fino alla posizione di interesse. Lo stesso vale per
+gli intervalli di tempo.
+Questa attività è
+spendibile sia in DAD che in classe, in questo secondo scenario gli studenti
+vengono divisi in gruppi di tre per svolgere l’esperimento.
+
 \section{Explain}\label{velocità_explain}
+
+\begin{itemize}
+\item \textbf{Tempo richiesto in aula:} 40\textsuperscript{$\prime$}
+      + 60\textsuperscript{$\prime$} di discussione con il professore
+\end{itemize}
+
+Dopo che gli studenti hanno svolto tutte le attività proposte, occorre un
+confronto con l’insegnante e con i propri compagni di classe su quanto
+osservato. A questo scopo la classe viene divisa in gruppi di cinque nei quali gli
+studenti hanno il tempo di discutere e confrontare i risultati degli esercizi
+svolti. Questo primo confronto coinvolge le prime due attività svolte. Dopo
+circa mezz’ora l’insegnante riunisce tutti gli alunni e chiede ad un
+rappresentante di ciascun gruppo di presentare quanto emerso.
+Si presume che la maggior parte degli studenti riescano ad interpretare i
+grafici in relazione al movimento della mano: due spostamenti uguali percorsi
+in intervalli di tempo di durata diversa corrispondono ad un movimento più
+rapido se il periodo di tempo è minore e più lento se è maggiore; osservazioni
+analoghe possono essere fatte fissando l’intervallo di tempo e osservando
+spostamenti diversi.
+A questo punto dovrebbe essere chiaro agli studenti che le grandezze in gioco
+che influenzano la rapidità del movimento della mano sono la distanza compiuta
+e l’intervallo di tempo impiegato per compierla. A questo punto viene chiesto
+agli studenti di provare ad ipotizzare quale potrebbe essere l’espressione
+matematica che meglio descriva questa relazione. Una possibile ipotesi è che
+essa sia data dal prodotto tra la distanza e il tempo impiegato per
+percorrerla. Tuttavia il docente può far notare che in tal caso non sarebbe
+possibile che un uguale aumento della distanza e del tempo impiegato non portino
+variazione nella rapidità, mentre questo è possibile osservarlo nei grafici. Si
+ritiene, invece, che pochi alunni possano ipotizzare che la relazione cercata
+sia data dalla somma o dalla differenza. Nel caso accada, il professore guida i
+ragazzi nel comprendere che non ha senso  sommaregrandezze fisiche diverse
+(si può osservare anche dalle unità di misura). Infine, si
+ritiene che qualche studente giunga alla risposta corretta, ovvero che la
+relazione sia data dal rapporto tra distanza e intervallo di tempo impiegato.
+Questo risulta essere ragionevole, anche perché il rapporto è l'operazione
+di confronto tra due quantità.
+Grazie al lavoro fatto nel Capitolo \ref{posizioni_istanti}, gli studenti sanno
+che sia la  distanza che l’intervallo di tempo sono dati da una differenza
+di posizione nel  primo caso e di tempo nel secondo. Allora l’espressione
+che si ottiene è la seguente:
+
+\begin{equation}
+\textrm{velocità media} = \frac{\textrm{distanza}}{\textrm{intervallo di tempo}} =
+\frac{s_f - s_i}{t_f - t_i}
+\end{equation}
+
+Il professore riporta all’attenzione degli studenti i grafici delle spezzate e
+chiede loro quale sia la differenza tra ciascun tratto. Alcuni studenti saranno
+in grado di rispondere che si tratta della pendenza, altri forse saranno più
+specifici e useranno il termine coefficiente angolare. Si ritiene possibile che
+qualche studente noti che l’espressione della velocità media appena incontrata
+corrisponda al coefficiente angolare di ciascun segmento. Altrimenti
+l’insegnante li guiderà in questo confronto.
+Dopo aver analizzato in profondità le prime due attività e aver dedotto il
+concetto di velocità media, si lavora sull’ultima attività proposta: la caduta
+di una biglia nel detersivo. Anche in questo caso si lascia ai gruppi 20 minuti
+per confrontarsi sui dati raccolti
+\footnote{
+          I risultati dell'analisi dati di questo esperimento, svolto
+          nell'ambito di questo progetto, sono presentati nell'Appendice
+          \ref{appendix_data_analysis}.
+         }.
+Successivamente si
+inizia un dialogo con il docente, riportando quanto osservato. La maggior parte
+dei gruppi dovrebbe concludere che la biglia impiega tempi simili a percorrere
+ciascun tratto, ovvero che tratti uguali vengono percorsi in tempi uguali.
+Grazie al lavoro precedente, gli studenti possono affermare che la velocità
+media risulta essere uguale per ciascun tratto. Questa ipotesi è supportata sia
+dal fatto che il grafico spostamento-tempo mostra che tutti segmenti disegnati
+hanno la stessa pendenza,
+sia dal fatto che ora gli studenti sono in grado di calcolare la velocità
+media per ciascuna coppia distanza-intervallo di tempo.
+L’insegnante fa notare che si osserva che le velocità medie sono uguali nei
+diversi tratti, nonostante il numero di tratti scelto possa variare da studente
+a studente. Questo può portare ad ipotizzare che questa osservazione rimarrebbe
+vera anche con un numero elevato di tratti. Allora il docente è giustificato
+nel definire questo tipo di moto \emph{uniforme}
+\footnote{
+          In effetti un moto uniforme è
+          tale se la velocità è costante in ogni istante di tempo. Occorrerebbero,
+          dunque, infiniti tratti. Ma l’approssimazione di un numero elevato di tratti è
+          sufficiente per quanto discusso in questa fase, dove ancora non si è affrontato
+          il concetto di velocità istantanea
+         }.
+Infine, è importante far osservare agli
+alunni che la biglia cade verticalmente, si potrebbe affermare che tracci una
+retta verticale. Dunque il moto è definito come \emph{rettilineo uniforme}. Questa
+fase si conclude con la scoperta della legge oraria di tale moto. Il professore
+chiede ai ragazzi di trovare l’espressione della velocità media per ciascun
+tratto percorso dalla biglia. Successivamente li guida nell’invertire ciascuna
+espressione così da ottenere i relativi spostamenti:
+
+\begin{align}
+\Delta s_1 &= v_m \Delta t_1 \\
+\Delta s_2 &= v_m \Delta t_2 \\
+\Delta s_3 &= v_m \Delta t_3 \\
+\Delta s_4 &= v_m \Delta t_4
+\end{align}
+
+L’insegnante utilizza queste espressioni degli spostamenti di ciascun tratto
+per far notare che differiscono solo per l’indice, che indica il tratto di
+riferimento, mentre la velocità $v_m$ è sempre la stessa. Allora è possibile
+generalizzare ad una espressione generale: $\Delta s= v \Delta t$, dove $\Delta s$
+è la differenza tra posizione finale e posizione iniziale.
+Infine, si ottiene la legge oraria del moto rettilineo uniforme esplicitando la
+posizione finale:
+
+\begin{equation}
+s = s_0 + v (t - t_0)
+\end{equation}
+
+\pagebreak
 
 \section{Extend}
 
@@ -477,7 +718,7 @@ pallone aerostatico nella stratosfera
 \footnote{
           \`E possibile scaricare l'estratto del video presso
           \href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/felix_baumgartner.mp4?raw=true}{questo indirizzo web}.
-          L'indirizzo del video originale si trova nwi riferimenti\cite{felix}.
+          L'indirizzo del video originale si trova nei Riferimenti\cite{felix}.
          }.
 L'insegnante chiede agli studenti di descrivere cosa accade nel
 video, concentrandosi in particolare sulla velocità di Felix in caduta
@@ -504,7 +745,6 @@ Egli disegna con il programma un ramo di parabola con concavità
 verso il basso e la mostra agli studenti (Si veda la Figura
 \ref{fig:geogebra}), chiedendo di immaginare che questo grafico
 rappresenti il moto di Felix nella stratosfera.
-
 \begin{figure}[H]
 \centering
   \begin{subfigure}[b]{0.49\textwidth}
@@ -524,7 +764,6 @@ rappresenti il moto di Felix nella stratosfera.
           }
   \label{fig:geogebra}
 \end{figure}
-
 La scala sugli assi non è importante e neppure che gli studenti sappiano quale
 curva è rappresentata nel grafico.
 Il professore chiede agli studenti di concentrarsi su un tratto arbitrario della
@@ -554,6 +793,12 @@ angolare di quest'ultima rappresenta la velocità media corrispondente ad un int
 di tempo di durata \emph{zero} secondi, ovvero la ``\emph{velocità media di un istante}''.
 Il docente ufficializza la conoscenza acquisita, spiegando che questa grandezza è
 chiamata \emph{velocità instantanea} o più semplicemente \emph{velocità}.
+
+\section{Evaluate}
+Per la valutazione di questo secondo modulo del percorso il docente tiene conto della
+partecipazione degli studenti alle varie attività proposte a casa e in classe,
+del lavoro svolto sui grafici e i video richiesti e del loro coinvolgimento attivo
+all’interno dei gruppi di discussione.
 
 \chapter{Accelerazione, Moto Rettilineo Uniformemente Accelerato}
 \section{Explain}\label{a_explain}
@@ -598,7 +843,6 @@ L'insegnate dovrebbe mostrare un rapido, ma efficave esempio pratico
 di utilizzo di questo strumento, per esempio attivando la funzione
 di registrazione dati, lanciando in aria il telefono, riprendendolo
 al volo e mostrando il risultato agli studenti.
-
 \begin{figure}[H]
 \centering
   \includegraphics[width=\textwidth]{phyphox}
@@ -607,7 +851,6 @@ al volo e mostrando il risultato agli studenti.
            nell'applicazione Phyphox.}
   \label{fig:phyphox}
 \end{figure}
-
 In seguito il professore assegna agli studenti un compito da eseguire
 a casa: indica agli studenti di scegliere una superfice inclinata
 e priva di attrito
@@ -636,8 +879,6 @@ dati nel formato preferito grazie alla funzione
 \emph{Export Data}, e in seguito analizzarli con uno
 strumento di propria scelta.
 Una possibile analisi è mostrata nella Figura \ref{fig:a_phyphox}.
-
-
 \begin{figure}[H]
 \centering
   \includegraphics[width=\textwidth]{a_phyphox}
@@ -650,7 +891,6 @@ Una possibile analisi è mostrata nella Figura \ref{fig:a_phyphox}.
           }
   \label{fig:a_phyphox}
 \end{figure}
-
 Il professore aiuta gli studenti ad analizzare il grafico ponendo
 alcune domande: ``Riuscite ad individuare nel grafico l'istante
 in cui il telefono è stato lasciato libero di scivolare?'',
@@ -663,7 +903,25 @@ la realizzazione che un corpo avente velocità nulla ad un certo
 istante, non necessariamente deve avere anche un'accelerazione nulla.
 
 \appendix
-\chapter{Analisi Dati}
+\chapter{Grafici per le Attività Cinestetiche}\label{appendix_kine}
+Sono qui presentati alcuni esempi di grafici che il docente può
+utilizzare per le attività cinestetiche.
+
+\begin{figure}[H]
+\centering
+  \includegraphics[width=\textwidth]{kine_plot4}
+  \label{fig:kine_plot4}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+  \includegraphics[width=\textwidth]{kine_plot5}
+  \caption{Grafici di curve per le attività
+           cinestetiche.}
+  \label{fig:kine_plot5}
+\end{figure}
+
+\chapter{Analisi Dati}\label{appendix_data_analysis}
 \section{Moto Rettilineo Uniforme}
 
 \begin{figure}[H]
