Add link and qrcode to repo (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -10,6 +10,7 @@
 
 \usepackage{hyperref}
 
+\usepackage{qrcode}
 \usepackage{amsmath}
 
 \addto\captionsitalian{\renewcommand{\bibname}{Riferimenti}}
@@ -22,7 +23,25 @@ Savatteri}
 \setcounter{page}{2}
 
 Copyright Daniele Melocchi, Agnese Montanaro, Matteo Savatteri -
-\the\year \doclicenseThis \thispagestyle{empty}
+\the\year
+\doclicenseThis
+
+\vfill
+
+Contatti:
+\begin{itemize}
+\item \href{mailto:daniele.melocchi@studenti.unimi.it}{daniele.melocchi@studenti.unimi.it}
+\item \href{mailto:agnese.montanaro@studenti.unimi.it}{agnese.montanaro@studenti.unimi.it}
+\item \href{mailto:matteo.savatteri@studenti.unimi.it}{matteo.savatteri@studenti.unimi.it}
+\end{itemize}
+
+Il codice sorgente utilizzato per generare questo documento
+è disponibile nella cartella \texttt{progetto\_finale} della
+repository git raggiungibile presso l'indirizzo:
+\\\\
+\url{https://github.com/savaroskij/PED1} \hfill \qrcode{https://github.com/savaroskij/PED1}
+
+\thispagestyle{empty}
 
 \tableofcontents
 
