--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -820,6 +820,49 @@ del lavoro svolto sui grafici e i video richiesti e del loro coinvolgimento atti
 all’interno dei gruppi di discussione.
 
 \chapter{Accelerazione, Moto Rettilineo Uniformemente Accelerato}
+Nel presente modulo lo studente familiarizza con il concetto di accelerazione
+media e con la legge oraria del moto uniformemente accelerato.
+Infine egli giunge ad una comprensione più profonda della differenza
+tra accelerazione e velocità.
+
+\section{Engage}
+
+\begin{itemize}
+\item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
+\item \textbf{Materiale:} Computer
+\end{itemize}
+
+Il professore mostra agli studenti dei video interessanti di moti uniformemente
+accelerati. Nel contesto di questo progetto si suggerisce di riprodurre un
+filmato in cui viene mostrata la caduta di un martello e di
+una piuma in ambiente lunare (Figura \ref{fig:hammer_feather_moon})
+\footnote{
+          \`E possibile scaricare i video utilizzati in questo engage:
+            \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/Hammer-Feather_Moon.mp4?raw=true}{indirizzo primo video}},
+            \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/Ball-Feather_Vacuum.mp4?raw=true}{indirizzo secondo video}}.
+            I link ai video originali si trovano nei
+            riferimenti\cite{moon}\cite{bowling}.
+         }.
+\begin{figure}[H]
+\centering
+  \includegraphics[width=\textwidth]{hammer_feather_moon}
+  \caption{Un fotogramma del video di un astronauta sulla Luna che lascia
+           cadere un martello e una piuma.}
+  \label{fig:hammer_feather_moon}
+\end{figure}
+Il docente interrompe il filmato nell’istante
+precedente alla caduta e domanda agli studenti che cosa si aspettano accada. Si
+presume che gli studenti non prevedano che gli oggetti arrivino al suolo
+insieme.
+Un secondo filmato in slow motion riproduce la stessa esperienza nell’ambiente
+controllato di un laboratorio, permettendo agli studenti di poter apprezzare
+maggiormente il moto descritto.
+
+Questa attività cattura l’attenzione degli studenti e consente al docente
+di dirigere la curiosità dei propri alunni sui moti accelerati.
+
+\section{Explore}
+
 \section{Explain}\label{a_explain}
 
 \section{Extend}
