Make hrefs blue (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -30,16 +30,16 @@ Copyright Daniele Melocchi, Agnese Montanaro, Matteo Savatteri -
 
 Contatti:
 \begin{itemize}
-\item \href{mailto:daniele.melocchi@studenti.unimi.it}{daniele.melocchi@studenti.unimi.it}
-\item \href{mailto:agnese.montanaro@studenti.unimi.it}{agnese.montanaro@studenti.unimi.it}
-\item \href{mailto:matteo.savatteri@studenti.unimi.it}{matteo.savatteri@studenti.unimi.it}
+\item \textcolor{blue}{\href{mailto:daniele.melocchi@studenti.unimi.it}{daniele.melocchi@studenti.unimi.it}}
+\item \textcolor{blue}{\href{mailto:agnese.montanaro@studenti.unimi.it}{agnese.montanaro@studenti.unimi.it}}
+\item \textcolor{blue}{\href{mailto:matteo.savatteri@studenti.unimi.it}{matteo.savatteri@studenti.unimi.it}}
 \end{itemize}
 
 Il codice sorgente utilizzato per generare questo documento
 è disponibile nella cartella \texttt{progetto\_finale} della
 repository git raggiungibile presso l'indirizzo:
 \\\\
-\url{https://github.com/savaroskij/PED1} \hfill \qrcode{https://github.com/savaroskij/PED1}
+\textcolor{blue}{\url{https://github.com/savaroskij/PED1}} \hfill \qrcode{https://github.com/savaroskij/PED1}
 
 \thispagestyle{empty}
 
@@ -122,7 +122,7 @@ Nel contesto di questo progetto si è scelto il video in \emph{slow motion}
 di un colibrì in volo, che si nutre da un tubicino (Figura \ref{fig:hummingbird})
 \footnote{
 \`E possibile scaricare il video presso
-\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/Hummingbird.mp4?raw=true}{questa pagina web}
+\textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/Hummingbird.mp4?raw=true}{questa pagina web}}
 . L'indirizzo del video originale si trova nei Riferimenti\cite{hbird}.
 }.
 Solamente la componente video, e non quella audio, è stata invertita per
@@ -457,11 +457,11 @@ viscosità molto diversa
 \footnote{
           \`E possibile scaricare il video della biglia che
           cade nel detersivo presso
-          \href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/biglia_detersivo.mp4?raw=true}{questo indirizzo web}.
+          \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/biglia_detersivo.mp4?raw=true}{questo indirizzo web}}.
           Lo stesso esperimento con acqua si può trovare
-          \href{http://burymewithmymoney.com/}{qui},
+          \textcolor{blue}{\href{http://burymewithmymoney.com/}{qui}},
           e
-          \href{http://burymewithmymoney.com/}{qui}
+          \textcolor{blue}{\href{http://burymewithmymoney.com/}{qui}}
           quello con olio di semi.
          }.
 
@@ -502,7 +502,7 @@ tra le strisce di nastro, e può essere scelta arbitrariamente). A questo
 punto il docente muove la mano secondo quanto
 si legge dal grafico in Figura \ref{fig:kine_plot1}:
 \footnote{\`E possibile scaricare i video dell'attività cinestetica presso
-            \href{https://github.com/savaroskij/PED1/tree/master/progetto_finale/media/video/kine_videos_1}{questo indirizzo web}.
+            \textcolor{blue}{\href{https://github.com/savaroskij/PED1/tree/master/progetto_finale/media/video/kine_videos_1}{questo indirizzo web}}.
             Si veda per questo particolare esempio il file \texttt{vid\_plot\_1\_scale.mp4}.
          }
 sia le posizioni occupate dalla
@@ -553,7 +553,7 @@ approfonditamente la relazione il moto della la mano e cosa viene riportato
 sul grafico
 \footnote{
           Esempi di moti sono mostrati nei video presso
-          \href{https://github.com/savaroskij/PED1/tree/master/progetto_finale/media/video/kine_videos_2}{questa pagina web}.
+          \textcolor{blue}{\href{https://github.com/savaroskij/PED1/tree/master/progetto_finale/media/video/kine_videos_2}{questa pagina web}}.
 }
 In caso fosse possibile lavorare in classe, il moto rappresentato sui grafici
 può essere riprodotto dagli studenti con il proprio corpo, camminando in linea
@@ -585,9 +585,9 @@ prossima a quella limite molto rapidamente, proseguendo poi di moto uniforme
 lungo il resto del contenitore. Un esempio di sostanza potrebbe essere il
 detersivo per i piatti bottiglia in intervalli spaziali uguali tra loro (per esempio marcandoli con
 un pennarello), e di misurare questi ultimi e i tempi necessari
-alla biglia per percorrere ciascun tratto
-\footnote{\`E possiile scaricare il video dell'esperimento presso
-          \href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/biglia_detersivo.mp4?raw=true}{questa indirizzo web}.
+alla biglia per percorrere ciascun
+tratto \footnote{\`E possibile scaricare il video dell'esperimento presso
+          \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/biglia_detersivo.mp4?raw=true}{questo indirizzo web}}.
          }.
 Il docente chiede agli studenti di riportate in una tabella i dati
 misurati e di rappresentare il moto della biglia in un diagramma
@@ -736,7 +736,7 @@ si è scelto un estratto del lancio di Felix Baumgartner da un
 pallone aerostatico nella stratosfera
 \footnote{
           \`E possibile scaricare l'estratto del video presso
-          \href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/felix_baumgartner.mp4?raw=true}{questo indirizzo web}.
+          \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/felix_baumgartner.mp4?raw=true}{questo indirizzo web}}.
           L'indirizzo del video originale si trova nei Riferimenti\cite{felix}.
          }.
 L'insegnante chiede agli studenti di descrivere cosa accade nel
@@ -758,7 +758,7 @@ più lucida di questa realizzazione, utilizzando il software
           GeoGebra è una suite di programmi per la didattica della matematica
           disponibile per iOS, Android, GNU/Linux, Windows, Mac OS, Chromebook.
           Per maggiori informazioni, si visiti
-          \href{https://www.geogebra.org/}{questo sito web}.
+          \textcolor{blue}{\href{https://www.geogebra.org/}{questo sito web}}.
          }.
 Egli disegna con il programma un ramo di parabola con concavità
 verso il basso e la mostra agli studenti (Si veda la Figura
@@ -895,7 +895,7 @@ bicicletta, perché possa essere studiato con l'applicazione per smartphone
           (Sistemi supportati Android e IOS) che trasforma il proprio
           smartphone in un piccolo laboratorio di fisica. Maggiori
           informazioni e documentazione sono reperibili presso
-          \href{https://phyphox.org/}{questa pagina web}.
+          \textcolor{blue}{\href{https://phyphox.org/}{questa pagina web}}.
          }.
 In principio il docente presenta agli studenti l'app, mostrando loro dove
 reperirla e le sue funzioni, in particolare lo strumento di misura
