Fix typos and syntax errors (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -59,7 +59,7 @@ qualitativo, per passare ad uno via via più quantitativo:
 \begin{enumerate}
 \item Posizioni, istanti, distanze e intervalli temporali, leggi orarie.
 \item Velocità media, velocità istantanea, moto rettilineo uniforme.
-\item Accelerazione media, accelerazione istantanea, moto uniformemente
+\item Accelerazione media, moto uniformemente
       accelerato.
 \end{enumerate}
 
@@ -176,7 +176,7 @@ di moto a partire dal grafico stesso.
 \end{itemize}
 
 La prima attività proposta consiste nel fotografare diversi moti o situazioni
-(minimo 3) scelti dallo studente in vari momenti (possono essere scattate sia
+(minimo tre) scelti dallo studente in vari momenti (possono essere scattate sia
 nella stessa giornata che in giorni differenti), quindi disegnare una linea del
 tempo su un foglio e posizionare le foto scattate secondo i momenti scelti. Non
 occorre scegliere una scala per la linea del tempo, perché interessa che lo
@@ -200,7 +200,7 @@ posta sul fuoco o episodi di vita quotidiana (Figura \ref{fig:asse_t_pentola}).
 
 \begin{itemize}
 \item \textbf{Materiale richiesto:} Smartphone, Foglio di Carta
-\item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
+\item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
 \end{itemize}
 
 Come seconda attività viene chiesto di scegliere un punto di partenza su un
@@ -229,8 +229,8 @@ Anche in questo caso occorre che il professore mostri almeno uno più esempi
 \item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
 \end{itemize}
 
-Infine, la terza attività consiste nel ripercorrere (dall'inizio alla fine
-senza mai tornare idietro) la medesima via della
+Infine, la terza attività consiste nel ripercorrere (dall'inizio alla fine,
+senza mai tornare indietro) la medesima via della
 seconda esperienza, scattando dei \emph{selfie} e appuntandosi la lettura di orologio
 corrispondente a ciascuna foto. Viene richiesta una elaborazione grafica in
 analogia a quanto fatto nelle precedenti, senza che l’insegnante ne specifichi
@@ -293,7 +293,7 @@ interpreti la disomogeneità della disposizione delle
 immagini come corrispondente a periodi di tempo di diversa durata tra i diversi
 scatti. Il professore può formalizzare questo concetto utilizzando il termine
 \emph{intervallo di tempo}, lasciando che gli studenti ne diano la definizione.
-Sì osserverà, l’intervallo di tempo sarà dato dalla differenza tra le
+Sì osserverà che l’intervallo di tempo sarà dato dalla differenza tra le
 letture di orologio delle due fotografie. Il docente a questo punto può
 domandare se un singolo scatto occupi un intervallo di tempo. Si ritiene che la
 maggior parte degli alunni abbia chiaro che la risposta sia no. La letteratura
@@ -320,7 +320,7 @@ e l’altro con il concetto di \emph{distanza}.
 Per quanto riguarda la terza esperienza è possibile che molti studenti si siano
 trovati in difficoltà nella parte di rappresentazione grafica, in quanto meno
 guidata delle precedenti. Tuttavia, è plausibile che in qualche gruppo di
-lavoro sia emersa almeno l’impossibilità di utilizzare un’unica linea.
+lavoro sia emersa almeno l’impossibilità di utilizzare un’unica asse.
 L’attività, infatti, comprendeva due grandezze differenti: tempo e spazio.
 Nel caso nessun componente della classe sia arrivato ad ipotizzare un grafico
 con due assi, che indicano rispettivamente spazio e tempo, allora il professore
@@ -332,7 +332,7 @@ dalla discussione: il soggetto fotografato. Infatti, gli studenti potrebbero
 osservare che, a differenza delle prime due attività, qui il soggetto è sempre
 lo stesso in ogni scatto, cambiano solo i luoghi in cui si trova e le letture
 di orologio. Dunque, il grafico caratterizzato dai due assi posizione-tempo
-mostra dove si trova il soggetto fissato un istante di tempo, ovvero rappresenta
+mostra dove si trova il soggetto, fissato un istante di tempo, ovvero rappresenta
 il moto di questo corpo. Il professore sottolinea nuovamente l’esistenza di
 due informazioni, la posizione e il tempo, e che esse siano in relazione tra
 loro. Egli in particolare spiega che esse sono legate dal concetto
@@ -347,15 +347,15 @@ fissato.
 \end{itemize}
 
 In questa fase si proprone un attività mirata ad estendere la consapevolezza
-degli studente riguardo ad alcuni concetti presentati precedentemente.
+dello studente riguardo ad alcuni concetti presentati precedentemente.
 In particolare si desidera estendere l'idea di posizione, che lo studente ha maturato,
-allo spazio tridimensiosale.
+allo spazio tridimensionale.
 
 L'insegnante chiede a ciascuno studente di scegliere un oggetto nella stanza e di
 spiegare alla classe, con le proprie parole, dove questo eggetto si trovi.
 Lo studente potrebbe utilizzare altri oggetti nella stanza come riferimenti spaziali,
 dicendo ad esempio ``L'oggetto si trova accanto alla finestra'', oppure
-``L'oggetto si trova sopra il tavolo''; o forse potrebbe utilizzare se stesso come
+``L'oggetto si trova sopra il tavolo''; o forse potrebbe utilizzare sè stesso come
 riferimento affermando ``L'oggetto si trova alla mia destra, in alto''.
 A questo punto il docente chiede di scegliere altri due o tre oggetti,
 e fa la stessa richiesta di localizzazione. Lo studente si renderà
@@ -500,7 +500,7 @@ dove sono stati precedentemente incollati dei pezzi di nastro adesivo
 equidistanti tra loro (non è rilevante la lunghezza della distanza
 tra le strisce di nastro, e può essere scelta arbitrariamente). A questo
 punto il docente muove la mano secondo quanto
-si legge dal grafico in Figura \ref{fig:kine_plot1}:
+si legge nel grafico in Figura \ref{fig:kine_plot1}:
 \footnote{\`E possibile scaricare i video dell'attività cinestetica presso
             \textcolor{blue}{\href{https://github.com/savaroskij/PED1/tree/master/progetto_finale/media/video/kine_videos_1}{questo indirizzo web}}.
             Si veda per questo particolare esempio il file \texttt{vid\_plot\_1\_scale.mp4}.
@@ -548,8 +548,8 @@ La seconda attività proposta agli studenti consiste nello svolgere il
 procedimento opposto rispetto all’attività precedente. Il professore presenta
 agli studenti dei video che mostrano  alcuni moti della sua mano lungo il bordo
 del tavolo (un minimo di tre) e chiede loro di graficarli. In questo modo
-ciascuno studente può concentrarsi sul moto del corpo, comprendendo più
-approfonditamente la relazione il moto della la mano e cosa viene riportato
+ciascuno studente può concentrarsi sul moto del proprio corpo, comprendendo più
+approfonditamente la relazione tra il moto della la mano e cosa viene riportato
 sul grafico
 \footnote{
           Esempi di moti sono mostrati nei video presso
@@ -583,7 +583,8 @@ quale deve essere sufficiente affinché la biglia raggiunga una velocità
 prossima a quella limite molto rapidamente, proseguendo poi di moto uniforme
 (in prima approssimazione)
 lungo il resto del contenitore. Un esempio di sostanza potrebbe essere il
-detersivo per i piatti bottiglia in intervalli spaziali uguali tra loro (per esempio marcandoli con
+detersivo per i piatti. Agli alunni viene dunque chiesto di suddividere l'altezza
+del contenitore in intervalli spaziali uguali tra loro (per esempio marcandoli con
 un pennarello), e di misurare questi ultimi e i tempi necessari
 alla biglia per percorrere ciascun
 tratto \footnote{\`E possibile scaricare il video dell'esperimento presso
@@ -596,7 +597,7 @@ sarà necessario sommare di volta in volta tutte le distanze percorse
 dalla biglia fino alla posizione di interesse. Lo stesso vale per
 gli intervalli di tempo.
 Questa attività è
-spendibile sia in DAD che in classe, in questo secondo scenario gli studenti
+spendibile sia in DAD che in classe. In questo secondo scenario gli studenti
 vengono divisi in gruppi di tre per svolgere l’esperimento.
 
 \section{Explain}\label{velocità_explain}
@@ -608,7 +609,7 @@ vengono divisi in gruppi di tre per svolgere l’esperimento.
 
 Dopo che gli studenti hanno svolto tutte le attività proposte, occorre un
 confronto con l’insegnante e con i propri compagni di classe su quanto
-osservato. A questo scopo la classe viene divisa in gruppi di cinque nei quali gli
+osservato. A questo scopo la classe viene divisa in gruppi di cinque, nei quali gli
 studenti hanno il tempo di discutere e confrontare i risultati degli esercizi
 svolti. Questo primo confronto coinvolge le prime due attività svolte. Dopo
 circa mezz’ora l’insegnante riunisce tutti gli alunni e chiede ad un
@@ -620,17 +621,17 @@ rapido se il periodo di tempo è minore e più lento se è maggiore; osservazion
 analoghe possono essere fatte fissando l’intervallo di tempo e osservando
 spostamenti diversi.
 A questo punto dovrebbe essere chiaro agli studenti che le grandezze in gioco
-che influenzano la rapidità del movimento della mano sono la distanza compiuta
-e l’intervallo di tempo impiegato per compierla. A questo punto viene chiesto
+-che influenzano la rapidità del movimento della mano- sono la distanza compiuta
+e l’intervallo di tempo impiegato per compierla. Viene chiesto
 agli studenti di provare ad ipotizzare quale potrebbe essere l’espressione
-matematica che meglio descriva questa relazione. Una possibile ipotesi è che
+matematica che meglio descrive questa relazione. Una possibile ipotesi è che
 essa sia data dal prodotto tra la distanza e il tempo impiegato per
-percorrerla. Tuttavia il docente può far notare che in tal caso non sarebbe
+percorrerla. Il docente tuttavia può far notare che in tal caso non sarebbe
 possibile che un uguale aumento della distanza e del tempo impiegato non portino
-variazione nella rapidità, mentre questo è possibile osservarlo nei grafici. Si
+variazione nella rapidità, mentre è possibile osservarlo nei grafici. Si
 ritiene, invece, che pochi alunni possano ipotizzare che la relazione cercata
 sia data dalla somma o dalla differenza. Nel caso accada, il professore guida i
-ragazzi nel comprendere che non ha senso  sommaregrandezze fisiche diverse
+ragazzi nel comprendere che non ha senso  sommare grandezze fisiche diverse
 (si può osservare anche dalle unità di misura). Infine, si
 ritiene che qualche studente giunga alla risposta corretta, ovvero che la
 relazione sia data dal rapporto tra distanza e intervallo di tempo impiegato.
@@ -651,11 +652,11 @@ chiede loro quale sia la differenza tra ciascun tratto. Alcuni studenti saranno
 in grado di rispondere che si tratta della pendenza, altri forse saranno più
 specifici e useranno il termine coefficiente angolare. Si ritiene possibile che
 qualche studente noti che l’espressione della velocità media appena incontrata
-corrisponda al coefficiente angolare di ciascun segmento. Altrimenti
+corrisponda al coefficiente angolare di ciascun segmento; Altrimenti
 l’insegnante li guiderà in questo confronto.
 Dopo aver analizzato in profondità le prime due attività e aver dedotto il
 concetto di velocità media, si lavora sull’ultima attività proposta: la caduta
-di una biglia nel detersivo. Anche in questo caso si lascia ai gruppi 20 minuti
+di una biglia nel detersivo. Anche in questo caso si lasciano ai gruppi venti minuti
 per confrontarsi sui dati raccolti
 \footnote{
           I risultati dell'analisi dati di questo esperimento, svolto
@@ -666,26 +667,26 @@ Successivamente si
 inizia un dialogo con il docente, riportando quanto osservato. La maggior parte
 dei gruppi dovrebbe concludere che la biglia impiega tempi simili a percorrere
 ciascun tratto, ovvero che tratti uguali vengono percorsi in tempi uguali.
-Grazie al lavoro precedente, gli studenti possono affermare che la velocità
+Grazie al lavoro precedente gli studenti possono affermare che la velocità
 media risulta essere uguale per ciascun tratto. Questa ipotesi è supportata sia
-dal fatto che il grafico spostamento-tempo mostra che tutti segmenti disegnati
+dal fatto che il grafico spostamento-tempo mostra che tutti i segmenti disegnati
 hanno la stessa pendenza,
 sia dal fatto che ora gli studenti sono in grado di calcolare la velocità
 media per ciascuna coppia distanza-intervallo di tempo.
-L’insegnante fa notare che si osserva che le velocità medie sono uguali nei
+L’insegnante fa notare che le velocità medie sono uguali nei
 diversi tratti, nonostante il numero di tratti scelto possa variare da studente
-a studente. Questo può portare ad ipotizzare che questa osservazione rimarrebbe
-vera anche con un numero elevato di tratti. Allora il docente è giustificato
+a studente. Questo può portare ad ipotizzare che tale osservazione rimarrebbe
+vera anche con un numero elevato di tratti. Il docente allora è giustificato
 nel definire questo tipo di moto \emph{uniforme}
 \footnote{
           In effetti un moto uniforme è
           tale se la velocità è costante in ogni istante di tempo. Occorrerebbero,
           dunque, infiniti tratti. Ma l’approssimazione di un numero elevato di tratti è
           sufficiente per quanto discusso in questa fase, dove ancora non si è affrontato
-          il concetto di velocità istantanea
+          il concetto di velocità istantanea.
          }.
 Infine, è importante far osservare agli
-alunni che la biglia cade verticalmente, si potrebbe affermare che tracci una
+alunni che la biglia cade verticalmente. Si potrebbe affermare che tracci una
 retta verticale. Dunque il moto è definito come \emph{rettilineo uniforme}. Questa
 fase si conclude con la scoperta della legge oraria di tale moto. Il professore
 chiede ai ragazzi di trovare l’espressione della velocità media per ciascun
@@ -699,12 +700,12 @@ espressione così da ottenere i relativi spostamenti:
 \Delta s_4 &= v_m \Delta t_4
 \end{align}
 
-L’insegnante utilizza queste espressioni degli spostamenti di ciascun tratto
+L’insegnante utilizza le espressioni degli spostamenti di ciascun tratto
 per far notare che differiscono solo per l’indice, che indica il tratto di
-riferimento, mentre la velocità $v_m$ è sempre la stessa. Allora è possibile
-generalizzare ad una espressione generale: $\Delta s= v \Delta t$, dove $\Delta s$
+riferimento, mentre la velocità $v_m$ è sempre la stessa. \`E dunque possibile
+giungere ad una espressione generale: $\Delta s= v \Delta t$, dove $\Delta s$
 è la differenza tra posizione finale e posizione iniziale.
-Infine, si ottiene la legge oraria del moto rettilineo uniforme esplicitando la
+Infine si ottiene la legge oraria del moto rettilineo uniforme esplicitando la
 posizione finale:
 
 \begin{equation}
@@ -721,14 +722,14 @@ s = s_0 + v (t - t_0)
 \end{itemize}
 
 In questa fase si propone che lo studente estenda la propria conoscenza
-riguardo la velocità, introducento l'idea di \emph{velocità istantanea}.
-Uno studente di 1\textsuperscript{a} liceo scientifico, non dispone
-degli stumenti matematici necessari per comprendere la definizione
+riguardo la velocità, introducendo l'idea di \emph{velocità istantanea}.
+Uno studente di 1\textsuperscript{a} liceo scientifico non dispone
+degli strumenti matematici necessari per comprendere la definizione
 di velocità istantanea, che richiederebbe il concetto
-di \emph{limite} e di \emph{derivata}; Tuttavia egli, sulla base
+di \emph{limite} e di \emph{derivata}. Egli tuttavia, sulla base
 dei concetti introdotti nelle fasi precedenti, può acquisire
 una conoscenza intuitiva dell'operazione di limite, che permette
-il passaggio dalla velocità media, alla velocità istantanea.
+il passaggio dalla velocità media alla velocità istantanea.
 
 Il docente per aiutare lo studente a comprendere questa idea,
 mostra un video di un corpo in caduta libera. Per questo progetto
@@ -742,14 +743,14 @@ pallone aerostatico nella stratosfera
 L'insegnante chiede agli studenti di descrivere cosa accade nel
 video, concentrandosi in particolare sulla velocità di Felix in caduta
 libera. Gli studenti potranno osservare che dopo il lancio la velocità
-dell'astronauta aumenta rapidamente e dunque non rimane costante, come nel
+dell'astronauta aumenta rapidamente e dunque non rimane costante come nel
 caso delle biglia che cade in un fluido molto viscoso.
 Gli studenti potrebbero utilizzare frasi come ``L'astronuata cade
 sempre più velocemente'' oppure ``L'astronauta parte
 lentamente e poi va più veloce''.
 Il professore dovrebbe porre l'attenzione della classe sulle
 risposte più simili alla prima affermazione. Quest'ultima
-infatti evidenzia il fatto che \emph{in ogni istante} la velocità
+infatti evidenzia che \emph{in ogni istante} la velocità
 dell'astronauta in caduta sta cambiando (e nel caso particolare aumenta).
 Il professore aiuta gli studenti a giungere ad una comprensione
 più lucida di questa realizzazione, utilizzando il software
@@ -761,7 +762,7 @@ più lucida di questa realizzazione, utilizzando il software
           \textcolor{blue}{\href{https://www.geogebra.org/}{questo sito web}}.
          }.
 Egli disegna con il programma un ramo di parabola con concavità
-verso il basso e la mostra agli studenti (Si veda la Figura
+verso il basso e lo mostra agli studenti (Si veda la Figura
 \ref{fig:geogebra}), chiedendo di immaginare che questo grafico
 rappresenti il moto di Felix nella stratosfera.
 \begin{figure}[H]
@@ -779,7 +780,7 @@ rappresenti il moto di Felix nella stratosfera.
   \includegraphics[width=\textwidth]{tg4}
   \end{subfigure}
   \caption{
-           Rami parabola  disegnati con GeoGebra.
+           Rami di parabola  disegnati con GeoGebra.
           }
   \label{fig:geogebra}
 \end{figure}
@@ -802,7 +803,7 @@ della secante è cambiata e questa si avvicina sempre più alla curva.
 Il professore ripete l'operazione altre due o
 tre volte, avvicinando sempre di più i punti A e B (permettendo ai ragazzi
 ogni volta di osservare la nuova retta secante) fino a che i due punti
-coincidono (Come si vede nella Figura \ref{velocità_explain}).
+coincidono (Come si vede nella Figura \ref{fig:geogebra}).
 
 Il professore suggerisce agli studenti che ora la retta rappresentata nel grafico
 è la retta tangente alla curva nel punto A, e chiede agli studenti se questa possa
@@ -816,7 +817,7 @@ chiamata \emph{velocità instantanea} o più semplicemente \emph{velocità}.
 \section{Evaluate}
 Per la valutazione di questo secondo modulo del percorso il docente tiene conto della
 partecipazione degli studenti alle varie attività proposte a casa e in classe,
-del lavoro svolto sui grafici e i video richiesti e del loro coinvolgimento attivo
+del lavoro svolto sui grafici e i video richiesti, e del loro coinvolgimento attivo
 all’interno dei gruppi di discussione.
 
 \chapter{Accelerazione, Moto Rettilineo Uniformemente Accelerato}
@@ -901,7 +902,7 @@ In principio il docente presenta agli studenti l'app, mostrando loro dove
 reperirla e le sue funzioni, in particolare lo strumento di misura
 \emph{Acceleration (Whitout g)} (Figura \ref{fig:phyphox}) e la funzione
 \emph{Save experiment state}.
-L'insegnate dovrebbe mostrare un rapido, ma efficave esempio pratico
+L'insegnante dovrebbe mostrare un rapido ma efficave esempio pratico
 di utilizzo di questo strumento, per esempio attivando la funzione
 di registrazione dati, lanciando in aria il telefono, riprendendolo
 al volo e mostrando il risultato agli studenti.
@@ -914,7 +915,7 @@ al volo e mostrando il risultato agli studenti.
   \label{fig:phyphox}
 \end{figure}
 In seguito il professore assegna agli studenti un compito da eseguire
-a casa: indica agli studenti di scegliere una superfice inclinata
+a casa: indica loro di scegliere una superfice inclinata
 e priva di attrito
 \footnote{
           Si ricorda che gli studenti di una classe prima liceo
@@ -925,7 +926,7 @@ e priva di attrito
 e di far scivolare il telefono lungo la superficie, attivando
 la registrazione dati dello strumento appena mostrato.
 Il compito di scegliere l'inclinazione del piano, il modo in cui
-collocare il telefono sopra di esso, e altre osservazioni pratiche
+collocare il telefono sopra di esso e altre osservazioni pratiche
 sono lasciate allo studente.
 
 Durante la lezione successiva l'insegnate chiede agli studenti
@@ -934,8 +935,8 @@ che questi danno ai grafici prodotti dall'applicazione.
 Il docente dovrebbe aver riprodotto l'esperienza, in modo
 da poter presentare agli studenti i propri risultati in una
 forma più adatta alla comprensione degli stessi.
-Si ritiene che grafici prodotti da Phyphox siano utili,
-in quanto immediati, ma di difficile interpretazione
+Si ritiene che i grafici prodotti da Phyphox siano utili,
+in quanto di accesso immediato, ma di difficile interpretazione
 per uno studente. Il docente potrà esportare i propri
 dati nel formato preferito grazie alla funzione
 \emph{Export Data}, e in seguito analizzarli con uno
@@ -956,10 +957,10 @@ Una possibile analisi è mostrata nella Figura \ref{fig:a_phyphox}.
 Il professore aiuta gli studenti ad analizzare il grafico ponendo
 alcune domande: ``Riuscite ad individuare nel grafico l'istante
 in cui il telefono è stato lasciato libero di scivolare?'',
-``Quando vale l'accelerazione prima che il telefono inizi a
+``Quanto vale l'accelerazione prima che il telefono inizi a
 scivolare?'', ``Quanto vale l'accelerazione nell'istante
 in cui il telefono viene lasciato scivolare, ma è ancora fermo,
-ovvero la sua velocità vale zero?'', ``E mentre il telefono sta
+ovvero la sua velocità vale zero? E mentre il telefono sta
 scivolando?''. In questo modo egli guida gli studenti verso
 la realizzazione che un corpo avente velocità nulla ad un certo
 istante, non necessariamente deve avere anche un'accelerazione nulla.
@@ -1014,7 +1015,7 @@ utilizzare per le attività cinestetiche.
 \begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth]{fit_bike}
-  \caption{Fit lineare dei dati per l'esperimento della bicicletta che scende da una rampa,
+  \caption{Fit dei dati per l'esperimento della bicicletta che scende da una rampa,
            un esempio di moto rettilineo uniformemente accelerato.}
   \label{fig:fit_bike}
 \end{figure}
